[package]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
name = "railroad"
version = "0.1.0"

[dependencies]
blake2 = "0.7"
clap = "2.29"
curve25519-dalek = "0.14"
ed25519-dalek = "0.6"
env_logger = "0.5"
fnv = "1.0"
futures = "0.1"
log = "0.4"
rand = "0.4"
tokio = "0.1"
tokio-timer = "0.1"
num-traits = "0.1"
num-bigint = "0.1"
tokio-io = "0.1"
bytes = "0.4"

[dependencies.byteorder]
features = ["i128"]
version = "1.2"

[dependencies.digest]
features = ["std"]
version = "0.7"
