[package]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
name = "railroad"
version = "0.1.0"
license = "BSD-2-Clause"
repository = "https://github.com/PlasmaPower/railroad"

[workspace]
members = [
    "./",
    "nanocurrency-types",
    "nanocurrency-protocol",
]

[dependencies]
blake2 = "0.7"
clap = "2"
curve25519-dalek = "1"
env_logger = "0.5"
futures = "0.1"
log = "0.4"
rand = "0.4"
tokio = "0.1"
tokio-timer = "0.1"
tokio-io = "0.1"
bytes = "0.4"
nanocurrency-types = { version = "0.3", path = "nanocurrency-types" }
nanocurrency-protocol = { version = "0.5", path = "nanocurrency-protocol" }
nanocurrency-peering = { version = "0.6", path = "nanocurrency-peering" }
digest = { version = "0.7", features = ["std"] }
byteorder = { version = "1", features = ["i128"] }
net2 = "0.2.32"
ed25519-dalek = "0.8.1"
