[package]
name = "nanocurrency-peering"
version = "0.2.1"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
description = "Peering code for the Nano cryptocurrency"
license = "BSD-2-Clause"

[dependencies]
futures = "0.1"
tokio = "0.1"
net2 = "0.2"
nanocurrency-types = { version = "0.2", path = "../nanocurrency-types" }
nanocurrency-protocol = { version = "0.3", path = "../nanocurrency-protocol" }
log = "0.4"
tokio-timer = "0.1"
tokio-io = "0.1"
bytes = "0.4"
rand = "0.4"
