[package]
name = "nanocurrency-peering"
version = "0.3.1"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
description = "Peering code for the Nano cryptocurrency"
license = "BSD-2-Clause"
repository = "https://github.com/PlasmaPower/railroad"

[dependencies]
futures = "0.1"
tokio = "0.1"
net2 = "0.2"
nanocurrency-types = { version = "0.3", path = "../nanocurrency-types" }
nanocurrency-protocol = { version = "0.4", path = "../nanocurrency-protocol" }
log = "0.4"
tokio-timer = "0.1"
tokio-io = "0.1"
bytes = "0.4"
rand = "0.4"
