[package]
name = "nanocurrency-protocol"
version = "0.7.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
description = "Protocol code for the Nano cryptocurrency"
license = "BSD-2-Clause"
repository = "https://github.com/PlasmaPower/railroad"

[dependencies]
byteorder = { version = "1", features = ["i128"] }
bytes = "0.5"
tokio-util = { version = "0.3.1", features = ["codec"] }
nanocurrency-types = { path = "../nanocurrency-types", version = "0.4" }
ed25519-dalek = "0.9"
