[package]
name = "nanocurrency-types"
version = "0.3.18"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
description = "A set of types for the Nano cryptocurrency"
license = "BSD-2-Clause"
repository = "https://github.com/PlasmaPower/railroad"

[dependencies]
blake2 = "0.8"
digest = { version = "0.8", features = ["std"] }
byteorder = { version = "1", features = ["i128"] }
ed25519-dalek = "0.9"
num-traits = "0.1"
num-bigint = "0.1"
serde = "1.0.53"
serde_derive = "1.0.53"
hex = "0.3"
curve25519-dalek = "1.0.1"
# Needed for thread_rng for ed25519-dalek
rand = { version = "0.6.5", features = ["std"] }

[dev-dependencies]
serde_json = "1.0.17"
